# chenin

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  NOI_S_Builder.toml  README.md  commit-plan.md  pyproject.toml  tmp.txt
.claude/: CLAUDE.md
.claude/agents/: data-transform.agent.md  oop-expert.agent.md  regex-expert.agent.md
.claude/skills/plantuml/: QUICKREF.md  SKILL.md
.streamlit/: config.toml.back
data/: rapport RGTh_3cm.txt  rapport RGU_3cm.txt
data/NOIR24-01/: NOIR24-01-Roadmap.csv  NOI_S_1.txt  NOI_S_10.txt  NOI_S_11.txt  NOI_S_13.txt  NOI_S_3.txt  NOI_S_results_271125.xlsx
data/NOI_S/: NOI_S_16.txt  NOI_S_2.txt  NOI_S_4.txt  NOI_S_5.txt  NOI_S_6.txt  NOI_S_7.txt  NOI_S_8.txt  NOI_S_9.txt  synthesis.toml
data/NOI_S/NOI_S_1/: s1.csv  s2.csv  s3.csv  s4_nucleides.csv  s4_pics.csv  s5.csv  s6.csv
data/NOI_S/NOI_S_10/: s1.csv  s2.csv  s3.csv  s4_nucleides.csv  s4_pics.csv  s5.csv  s6.csv
data/NOI_S/NOI_S_11/: s1.csv  s2.csv  s3.csv  s4_nucleides.csv  s4_pics.csv  s5.csv  s6.csv
data/NOI_S/NOI_S_13/: s1.csv  (+6 more)
data/test/: ceritfied_values-RGTh.csv  ceritfied_values-RGU.csv  ceritfied_values-S447.csv  rapport-S447_3cm.txt
docs/: measurement.md  synthesis.md  user-guide.md
src/: __init__.py  app.py  cli.py  main.py  poc.ipynb  poc.py  regex.txt  report.py  results_extraction.ipynb  serac.py  state.py
src/G2K_Parser/: __init__.py  _sections.py  report.py  utils.py
src/chenin/: __init__.py  cli.py  serac.py
src/extraction/: __init__.py  base.py  models.py  report.py
src/g2k_parser/: __init__.py  _sections.py  columns.py  parser.py  report.py  utils.py
src/pages/: summary.py  synthesis.py
src/parser/: __init__.py  _sections.py  report.py  utils.py
src/synthesis/: __init__.py  builder.py  config.py  loader.py  measurement.py  providers.py
src/ui/: app.py  state.py
tests/: __init__.py  test_s2_extraction.py  test_s6_extraction.py
(+99 files in other folders)
