[project]
name = "ptal-analyse"
version = "0.1.0"
description = "Tool for EDYTEM-PTAL, Extracte data from G2K report"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter-cjk-xelatex>=0.2",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "notebook>=7.5.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
]
