[project]
name = "chenin"
version = "0.1.0"
description = "Tool for EDYTEM-PTAL, Extracte data from G2K report"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
]

[project.scripts]
chenin = "cli:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter-cjk-xelatex>=0.2",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
]
