[project]
name = "chenin"
version = "0.2.0"
description = "Extract, synthesise and visualise Génie 2000 gamma-spectrometry reports (EDYTEM-PTAL)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "streamlit>=1.58.0",
    "streamlit-extras>=1.6.0",
]

[project.scripts]
chenin = "chenin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chenin"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "chenin/docs"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
